# CottonMouth

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  agent_policies.json  docker-compose.yml  pyproject.toml
CondaMon/: Package.swift
CondaMon/CondaMon/: ChatBridge.swift  CondaMonApp.swift  EventDetailView.swift  EventTickerWatcher.swift  TickerBarView.swift  TickerEvent.swift
deploy/: README.md
deploy/aws/: README.md  litellm-bedrock-policy.json  litellm-irsa-trust.json  real-agent-bedrock-policy.json  real-agent-trust.json  refresh-sandbox-creds.sh  setup-irsa.sh
deploy/k8s/: backend.yaml  configmap.yaml  ingress.yaml  kustomization.yaml  litellm-agent.yaml  litellm-config.yaml  litellm.yaml  namespace.yaml  postgres.yaml  real-agent.yaml  sample-agent.yaml  serviceaccount.yaml  web-lb.yaml  web.yaml
deploy/litellm/: Dockerfile
deploy/observability/: README.md  grafana-dashboard.json  prometheus-alerts.yaml  prometheus-scrape.yaml  quickstart.yaml  servicemonitor.yaml
docs/: ALERTING.md  API.md  ARCHITECTURE.md
examples/: devils_council.py  litellm_agent.py  ops_agent.py  real_agent.py  sample_agent.py
launchd/: backend.plist.in  ticker.plist.in
mcp-server/: README.md  pyproject.toml
mcp-server/examples/: mcp.json
mcp-server/src/cottonmouth_mcp/: __init__.py  server.py
scripts/: seed_traces.py
sdk/: pyproject.toml
sdk/src/cottonmouth/: __init__.py  context.py  decorator.py  exporters.py  llm_hooks.py  spans.py  tracer.py
sdk/src/cottonmouth/integrations/: __init__.py  gateway.py  litellm.py
src/: api.py  main.py  query_router.py  tools.py
src/common/: agent_stats.py  alerts.py  auth.py  config.py  events.py  gateway_client.py  metrics.py  notify.py  paths.py  policies.py  slack.py  state.py  users.py
src/watchers/: __init__.py  agent_trace_watcher.py  argocd.py  cloudflare_watcher.py  cloudtrail.py  cloudwatch.py  confluence_watcher.py  github_watcher.py  grafana_watcher.py  jira_watcher.py  slack_watcher.py  ticker_agent.py
tests/: conftest.py  test_gateway_agent_stats.py  test_litellm_integration.py
web/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
web/src/app/: globals.css  layout.tsx  (+1 more)
(+17 files in other folders)
