[project]
name = "cottonmouth"
version = "0.1.0"
description = "CottonMouth — AI agent observability and investigation platform with macOS ticker UI"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "python-dotenv>=1.0",
    "pync>=2.0",
    "boto3>=1.35",
    "prometheus-client>=0.20",
]

[project.scripts]
cottonmouth = "src.main:run"
