[project]
name = "cottonmouth"
version = "0.1.0"
description = "AI agent observability SDK — instrument any agent with one decorator"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.30"]
openai = ["openai>=1.0"]
aws = ["boto3>=1.35"]
all = ["anthropic>=0.30", "openai>=1.0", "boto3>=1.35"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cottonmouth"]
